--- a/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
@@ -146,6 +146,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AnimationView"
+               BuildableName = "AnimationView"
+               BlueprintName = "AnimationView"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
