--- a/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
@@ -210,6 +210,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "PollingCenterTest"
+               BuildableName = "PollingCenterTest"
+               BlueprintName = "PollingCenterTest"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
