[feat] AES, RSA Cipher에 문서화 주석 추가, 확장함수에 문서화 주석 추가

--- a/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
@@ -220,6 +220,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CryptoUtilsTests"
+               BuildableName = "CryptoUtilsTests"
+               BlueprintName = "CryptoUtilsTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
