[fix] test 폴더 이름 변경

--- a/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/KtSwiftPackage-Package.xcscheme
@@ -230,6 +230,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CryptoUtilTests"
+               BuildableName = "CryptoUtilTests"
+               BlueprintName = "CryptoUtilTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
